@@ -10,6 +10,9 @@
 	- review: copy of uint32_t using memcpy to avoid unaligned memory
 	  accesses.
 	- review: fd=-1 removed from set_refresh_now; only does timer.
+	- on a tcp timeout it will retry immediately (instead of waiting
+	  another retry timeout). This means if you set refresh_now, it will
+	  interrupt a tcp-timer for a fresh retry with the next master.
 
 3 Apr 2006: Wouter
 	- Added buffer length check to internal ipc.
